Selenium Test cases added

--- a/FoodboxFrontend/src/app/add-item/add-item.component.html
+++ b/FoodboxFrontend/src/app/add-item/add-item.component.html
@@ -48,8 +48,8 @@
   </div>
   
   <div class="container" align="center" style="margin-left: 20%;">
-    <button class="bigbutton" routerLink="/home" (click)="clearLocal()"><span>LogOut</span></button>
-    <button class="bigbutton" routerLink="/merchantMenu"><span>Menu</span></button>
-    <button class="bigbutton" type="submit"><span>AddItem</span></button>
+    <button class="btn btn-primary" routerLink="/home" (click)="clearLocal()"><span>LogOut</span></button> &nbsp;&nbsp;
+    <button class="btn btn-primary" routerLink="/merchantMenu"><span>Menu</span></button>&nbsp;&nbsp;
+    <button class="btn btn-primary" type="submit"><span>AddItem</span></button>
   </div>
   </form>
