--- a/FoodboxFrontend/src/app/login/login.component.html
+++ b/FoodboxFrontend/src/app/login/login.component.html
@@ -49,11 +49,11 @@
           </div>
         </div>
 
-
-        <button type="submit" class="bigbutton">
+        <br> 
+        <button type="submit" class="btn btn-primary">
           <span>Login</span>
-        </button>
-        <button class="bigbutton" routerLink="/register"><span>Register</span></button>
+        </button> &nbsp;&nbsp;
+        <button class="btn btn-primary" routerLink="/register"><span>Register</span></button>
       </form>
     </div>
     <div class="offset-3"></div>
