--- a/FoodboxFrontend/src/app/merchant-menu/merchant-menu.component.html
+++ b/FoodboxFrontend/src/app/merchant-menu/merchant-menu.component.html
@@ -40,8 +40,8 @@
 
   <br><br>
   <div class="container" align="center">
-    <button class="bigbutton" routerLink="/addItem"><span>Add Item</span></button>
-    <button routerLink="/home" type="button" class="bigbutton" (click)="clearLocal()"><span>Log Out</span></button>
+    <button class="btn btn-primary" routerLink="/addItem"><span>Add Item</span></button> &nbsp; &nbsp;
+    <button routerLink="/home" type="button" class="btn btn-primary" (click)="clearLocal()"><span>Log Out</span></button>
   </div>
 
 </div>
