--- a/FoodboxFrontend/src/app/merchant-welcome/merchant-welcome.component.html
+++ b/FoodboxFrontend/src/app/merchant-welcome/merchant-welcome.component.html
@@ -25,8 +25,8 @@
         <td>{{modelMerchant.email}}</td>
       </tr>
       <tr>
-        <td style="float: right"><button class="bigbutton" routerLink="/home" (click)="clearLocal()"><span>Log Out</span></button></td>
-        <td><button class="bigbutton" routerLink="/merchantMenu"><span>Alter Menu</span></button></td>
+        <td style="float: right"><button class="btn btn-primary" routerLink="/home" (click)="clearLocal()"><span>Log Out</span></button></td>
+        <td><button class="btn btn-primary" routerLink="/merchantMenu"><span>Alter Menu</span></button></td>
       </tr>
       </tbody>
     </table>
