--- a/FoodboxFrontend/src/app/register/register.component.html
+++ b/FoodboxFrontend/src/app/register/register.component.html
@@ -162,14 +162,14 @@
             </div>
           </table>
 
-          <table align="center" style="padding-right:10%">
-            <tr>
-              <td><button type="submit" class="bigbutton">
+          <br>
+          
+         <button type="submit" class="btn btn-primary">
                 <span>Register</span></button>
-              </td>
-              <td><button routerLink="/home" class="bigbutton"><span>Home</span></button> </td>
-            </tr>
-          </table>
+             
+              &nbsp;&nbsp;
+              <button routerLink="/home" class="btn btn-primary"><span>Home</span></button> 
+          
 
         </form>
       </div>
