Docker file added

--- a/FoodboxFrontend/src/app/update-item/update-item.component.html
+++ b/FoodboxFrontend/src/app/update-item/update-item.component.html
@@ -1,6 +1,6 @@
 <div class="container" align="center">
   <h3 align="center" class="card align-contents" style="width: 400px;">Update Item</h3>
-<div class="card align-contents" [hidden]="submitted" style="width: 400px;">
+<div class="card align-contents"  style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label  for="name"><b>Item</b></label>
